--- a/index_main.html
+++ b/index_main.html
@@ -54,6 +54,11 @@
                                 <span class="cart-notice">0</span>
                             </a>
                         </div>
+                        <div class="user">
+                            <a href="" class="user-link">
+                                <i class="fa-solid fa-user user-logo"></i>
+                            </a>
+                        </div>
                     </div>
 
                     <div class="banner_bars-btn">
@@ -3902,6 +3907,62 @@
                                     <ul class="price-list">
                                         <li class="price-item">2.321.000đ</li>
                                         <li class="price-item">3.570.000đ</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="item-title-add">
+                                <a href="" class="item-title-link">Mua ngay</a>
+                            </div>
+                        </div>
+
+                        <div class="col l-3 c-6 item-product-wrap">
+                            <div class="new__product-img-wrapper item-product">
+                                <a href="">
+                                    <img src="./assets/img/Product/Đèn trưng bày thanh lý/7.jpg" alt="" class="new__product-img item-product-img">
+                                </a>
+                            </div>
+
+                            <div class="sale-hot sale">
+                                <span>30%</span>
+                            </div>
+
+                            <div class="product__title">
+                                <div class="product__title-name">
+                                    <a href="" title="Đèn Thả Pha Lê Ø560mm AN22-CPL2009 - Trưng Bày">Đèn Thả Pha Lê Ø560mm AN22-CPL2009 - Trưng Bày</a>
+                                </div>
+                                <div class="product__title-price">
+                                    <ul class="price-list">
+                                        <li class="price-item">1,774,000đ</li>
+                                        <li class="price-item">8,870,000đ</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="item-title-add">
+                                <a href="" class="item-title-link">Mua ngay</a>
+                            </div>
+                        </div>
+
+                        <div class="col l-3 c-6 item-product-wrap">
+                            <div class="new__product-img-wrapper item-product">
+                                <a href="">
+                                    <img src="./assets/img/Product/Đèn trưng bày thanh lý/8.jpg" alt="" class="new__product-img item-product-img">
+                                </a>
+                            </div>
+
+                            <div class="sale-hot sale">
+                                <span>30%</span>
+                            </div>
+
+                            <div class="product__title">
+                                <div class="product__title-name">
+                                    <a href="" title="Đèn Pha Lê Thả Trần Phòng Khách PH-TH8193 - Trưng Bày">Đèn Pha Lê Thả Trần Phòng Khách PH-TH8193 - Trưng Bày</a>
+                                </div>
+                                <div class="product__title-price">
+                                    <ul class="price-list">
+                                        <li class="price-item">1,398,000đ</li>
+                                        <li class="price-item">6,990,000đ</li>
                                     </ul>
                                 </div>
                             </div>
