--- a/index_product.html
+++ b/index_product.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="./assets/css/product.css" />
     <script type="text/javascript" src="./assets/js/jquery-3.6.0.min.js"></script>  
     <script src="./assets/js/product.js"></script>
-    <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
-    <!-- <script type="text/javascript" src="./assets/js/jquery.js"></script> -->
     <link rel="stylesheet"href="./assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"rel="stylesheet"/>
     <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png"/>
@@ -428,7 +426,7 @@
       
         <div class="container grid wide">
             <div class="new_title">
-              <ul class="breadcrumb position-relative title-h2">
+              <ul class="breadcrumb title-h2">
                 <li class="breadcrumb-item">
                   <a href="" title="Trang chủ">Trang chủ</a>
                 </li>
