--- a/index_product.html
+++ b/index_product.html
@@ -468,25 +468,25 @@
                     <div class="divauthor description">
                         <ul>
                              <li>
-                            <span style="font-family: arial, helvetica, sans-serif"><span style="font-size: 14px"><strong>Kích thước :</strong>&nbsp;Ø900
+                            <span><span style="font-size: 14px"><strong>Kích thước :</strong>&nbsp;Ø900
                                 x H500mm + 300</span></span>
                           </li>
                           <li>
                             <p>
-                              <span style="font-family: arial, helvetica, sans-serif">
+                              <span>
                                 <span style="font-size: 14px"><strong>Bóng đèn :</strong></span>
                               </span>
 
-                              <span style="font-size: 14px; font-family: arial, helvetica, sans-serif;"></span>
+                              <span style="font-size: 14px;"></span>
 
-                              <span style="font-size: 14px; font-family: arial, helvetica, sans-serif;">Led 3 chế độ ánh sáng</span>
+                              <span style="font-size: 14px;">Led 3 chế độ ánh sáng</span>
 
-                              <span style="font-size: 14px; font-family: arial, helvetica, sans-serif;"></span>
+                              <span style="font-size: 14px;"></span>
                             </p>
                           </li>
                           <li>
                             <p>
-                              <strong><span style="font-family: arial, helvetica, sans-serif"><span style="font-size: 14px">Đặc điểm :</span></span></strong>
+                              <strong><span><span style="font-size: 14px">Đặc điểm :</span></span></strong>
                             </p>
                           </li>
                           <li>
@@ -501,12 +501,12 @@
                           </li>
                           <li>
                             <p>
-                              <span style="font-family: arial, helvetica, sans-serif"><span style="font-size: 14px"><strong>Xuất xứ :</strong>&nbsp;nhập khẩu</span></span>
+                              <span ><span style="font-size: 14px"><strong>Xuất xứ :</strong>&nbsp;nhập khẩu</span></span>
                             </p>
                           </li>
                           <li>
                             <p>
-                              <span style="font-family: arial, helvetica, sans-serif"><span style="font-size: 14px"><strong>Bảo hành :</strong>&nbsp;12
+                              <span ><span style="font-size: 14px"><strong>Bảo hành :</strong>&nbsp;12
                                   tháng</span></span>
                             </p>
                           </li>
@@ -531,14 +531,14 @@
                     <div class="divauthor even">
                         <p>
                           <span style="font-size: 14px">
-                            <span style="font-family: tahoma, geneva, sans-serif">
+                            <span>
                               - Sản phẩm chưa bao gồm thuế VAT, chi phí lắp đặt.
                             </span>
                           </span>
                         </p>
       
                         <p>
-                          <span style="font-size: 14px"><span style="font-family: tahoma, geneva, sans-serif">- Sản phẩm xuất giao đều có phiếu bán
+                          <span style="font-size: 14px"><span>- Sản phẩm xuất giao đều có phiếu bán
                               hàng đi kèm, khách hàng
                               không nhận được vui lòng liên hệ số
                               điện thoại 028.22458144.
@@ -546,7 +546,7 @@
                         </p>
       
                         <p>
-                          <span style="font-size: 14px"><span style="font-family: tahoma, geneva, sans-serif">- Địa điểm bảo hành sản phẩm: 8 Tân Khai,
+                          <span style="font-size: 14px"><span>- Địa điểm bảo hành sản phẩm: 8 Tân Khai,
                               Phường 4, Quận Tân Bình, Tp. HCM</span></span>
                         </p>
                     </div>
