--- a/admin/NhanVien.html
+++ b/admin/NhanVien.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
     <script src="../assets/js/jquery-3.6.0.min.js"></script>
     <script src="../assets/js/click.js"></script>
+    <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png">
     <title>Quản lý cửa hàng bán đèn trang trí</title>
 </head>
 
