--- a/admin/login.html
+++ b/admin/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/login.css" />
     <link rel="stylesheet"href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css"/>
+    <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png">
     <!-- <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png"/> -->
 </head>
 <body>
