--- a/index_main.html
+++ b/index_main.html
@@ -50,8 +50,8 @@
                             <p>Hotline - Zalo</p>
                         </div>
                         <div class="cart">
-                            <a href="" class="cart-link">
-                                <i class="fa-solid fa-cart-shopping cart-logo"></i>
+                            <a href="giohang.html" class="cart-link">
+                                <i class="fas fa-shopping-bag cart-logo"></i>
                                 <span class="cart-notice">0</span>
                             </a>
                         </div>
@@ -85,17 +85,17 @@
 
                     <ul class="header__nav-list">
                         <li class="header__nav-item">
-                            <a href="">Trang chủ</a>
+                            <a style="color: #ffbe00" href="index_main.html">Trang chủ</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="">Giới thiệu</a>
+                            <a href="gioithieu.html">Giới thiệu</a>
                         </li>
                         <li class="header__nav-item menu-item">
-                            <a href="">Đèn trang trí ngoại thất</a>
+                            <a href="dennoithat.html">Đèn trang trí ngoại thất</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <ul class="subnav">
                                 <li class="subnav-item">
-                                    <a href="">Đèn Nội Thất</a>
+                                    <a href="dennoithat.html">Đèn Nội Thất</a>
                                    <i class="fa-solid fa-angle-right"></i>
                                    <ul class="subnav1">
                                         <li>
@@ -400,19 +400,19 @@
                             </ul>
                         </li>
                         <li class="header__nav-item">
-                            <a href="">Khuyến mãi</a>
+                            <a href="khuyenmai.html">Khuyến mãi</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="">Tin tức</a>
+                            <a href="tintuc.html">Tin tức</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="">Dự án thực hiện</a>
+                            <a href="duanthuchien.html">Dự án thực hiện</a>
                         </li>
                         <li class="header__nav-item">
                             <a href="">Catalogue</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="">Liên hệ  </a>
+                            <a href="lienhe.html">Liên hệ  </a>
                         </li>
                     </ul>
                 </nav>
@@ -4004,27 +4004,27 @@
                         <ul class="ul-footer">
                             <li>
                                 <h6 class="title_h6">
-                                    <a href="https://thegioianhsang.vn/ho-tro-khach-hang/bao-hanh/" title="Bảo hành">Bảo hành</a>
+                                    <a href="baohanh.html" title="Bảo hành">Bảo hành</a>
                                 </h6>
                             </li>
                             <li>
                                 <h6 class="title_h6">
-                                    <a href="https://thegioianhsang.vn/ho-tro-khach-hang/quy-dinh-va-hinh-thuc-thanh-toan/" title="Quy định và hình thức thanh toán">Quy định và hình thức thanh toán</a>
+                                    <a href="quydinh.html" title="Quy định và hình thức thanh toán">Quy định và hình thức thanh toán</a>
                                 </h6>
                             </li>
                             <li>
                                 <h6 class="title_h6">
-                                    <a href="https://thegioianhsang.vn/ho-tro-khach-hang/van-chuyen-giao-nhan/" title="Vận chuyển giao nhận">Vận chuyển giao nhận</a>
+                                    <a href="vanchuyen.html" title="Vận chuyển giao nhận">Vận chuyển giao nhận</a>
                                 </h6>
                             </li>
                             <li>
                                 <h6 class="title_h6">
-                                    <a href="https://thegioianhsang.vn/ho-tro-khach-hang/doi-tra-hang-va-hoan-tien/" title="Đổi trả hàng và hoàn tiền">Đổi trả hàng và hoàn tiền</a>
+                                    <a href="doihang.html" title="Đổi trả hàng và hoàn tiền">Đổi trả hàng và hoàn tiền</a>
                                 </h6>
                             </li>
                             <li>
                                 <h6 class="title_h6">
-                                    <a href="https://thegioianhsang.vn/ho-tro-khach-hang/bao-mat-thong-tin/" title="Bảo mật thông tin">Bảo mật thông tin</a>
+                                    <a href="baomat.html" title="Bảo mật thông tin">Bảo mật thông tin</a>
                                 </h6>
                             </li>
                         </ul>
