--- a/admin/TTTaiKhoan.html
+++ b/admin/TTTaiKhoan.html
@@ -7,9 +7,8 @@
     <link rel="icon" href="../img/logoCPT.png">
     <link rel="stylesheet" href="../assets/css/style_mainQT.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
-    <script src="../assets/js/jquery-3.6.0.min.js"></script>
-    <script src="../assets/js/click.js"></script>
-    <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png">
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>    
+    <script src="./js/click.js"></script>
     <title>Quản lý cửa hàng bán đèn trang trí</title>
 </head>
 
@@ -34,13 +33,14 @@
                 <button onclick="SanPham()"><i class="fas fa-barcode"></i> Sản phẩm</button>
                 <button onclick="NhaCungCap()"><i class="fas fa-truck"></i> Nhà cung cấp</button>
                 <button onclick="KhachHang()"><i class="fas fa-users"></i> Khách hàng</button>
-                <button onclick="NhanVien()"><i class="fas fa-user"></i> Nhân viên</button>
                 <button onclick="HoaDonNhap()"><i class="fas fa-file-import"></i> Hóa đơn nhập</button>
                 <button onclick="HoaDonBan()"><i class="fas fa-shopping-cart"></i> Hóa đơn bán</button>
                 <button onclick="TinTuc()"><i class="fas fa-newspaper"></i> Tin tức</button>
-                <button onclick="ThietLap()"><i class="fas fa-cogs"></i> Thiết lập</button>
+                <button onclick="TaiKhoan()"><i class="fas fa-user"></i> Tài khoản</button>
+                <button onclick="ThongKe()"><i class="fa-solid fa-chart-column"></i> Thống kê</button>
+                <!-- <button onclick="ThietLap()"><i class="fas fa-cogs"></i> Thiết lập</button> -->
             </div>
-            <div class="bx-left" id="button-left">
+            <!-- <div class="bx-left" id="button-left">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeBTN()"><i
                         class="far fa-window-close"></i></a>
                 <ul>
@@ -49,13 +49,13 @@
                     <li onclick="SanPham()"><i class="fas fa-barcode"></i> Sản phẩm</li>
                     <li onclick="NhaCungCap()"><i class="fas fa-truck"></i> Nhà cung cấp</li>
                     <li onclick="KhachHang()"><i class="fas fa-users"></i> Khách hàng</li>
-                    <li onclick="NhanVien()"><i class="fas fa-user"></i> Nhân viên</li>
+                    <li onclick="TaiKhoan()"><i class="fas fa-user"></i> Tài khoản</li>
                     <li onclick="HoaDonNhap()"><i class="fas fa-file-import"></i> Hóa đơn nhập</li>
                     <li onclick="HoaDonBan()"><i class="fas fa-shopping-cart"></i> Hóa đơn bán</li>
                     <li onclick="TinTuc()"><i class="fas fa-newspaper"></i> Tin tức</li>
                     <li onclick="ThietLap()"><i class="fas fa-cogs"></i> Thiết lập</li>
                 </ul>
-            </div>
+            </div> -->
             <div class="col-11 col-s-12 content">
                 <div class="col-12 col-s-12 content">
                     <div class="tabcontent">
