--- a/admin/TongQuanNV.html
+++ b/admin/TongQuanNV.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="../assets/css/style_mainQT.css">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
     <script src="../assets/js/jquery-3.6.0.min.js"></script>
-    <script src="../assets/js/click.js"></script>
-    <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png">
+    <script src="../assets/js/angular.min.js"></script>
+    <script src="./js/click.js"></script>
+    <script src="./js/globalAD.js"></script>
+    <script src="./js/tongquan.js"></script>
+
     <title>Quản lý cửa hàng bán đèn trang trí</title>
 </head>
 
-<body>
+<body ng-app="AppAdmin"  ng-controller="TongQuanCtrl">
     <section class="header">
         <a href="javascript:void(0);" class="icon" onclick="openBTN()">
             <i class="fas fa-bars"></i>
         </a>
         <div class="box-login" id="box-t">
-            Xin chào, <span id="ten_nv">Admin</span> <i class="fas fa-sort-down"></i>
+            Xin chào, <span id="ten_nv">{{tk.tenTaiKhoan}}</span> <i class="fas fa-sort-down"></i>
             <div class="box-login-bottom" id="box-b">
                 <button onclick="TTTaiKhoan()"><i class="fas fa-user-alt"></i> Tài khoản</button>
                 <button onclick="LogOut();"><i class="fas fa-sign-out-alt"></i> Đăng xuất</button>
@@ -37,8 +40,9 @@
                 <button onclick="HoaDonNhap()"><i class="fas fa-file-import"></i> Hóa đơn nhập</button>
                 <button onclick="HoaDonBan()"><i class="fas fa-shopping-cart"></i> Hóa đơn bán</button>
                 <button onclick="TinTuc()"><i class="fas fa-newspaper"></i> Tin tức</button>
+                <button onclick="ThongKe()"><i class="fa-solid fa-chart-column"></i> Thống kê</button>
             </div>
-            <div class="bx-left" id="button-left">
+            <!-- <div class="bx-left" id="button-left">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeBTN()">
                     <i class="far fa-window-close"></i>
                 </a>
@@ -52,7 +56,7 @@
                     <li onclick="HoaDonBan()"><i class="fas fa-shopping-cart"></i> Hóa đơn bán</li>
                     <li onclick="TinTuc()"><i class="fas fa-newspaper"></i> Tin tức</li>
                 </ul>
-            </div>
+            </div> -->
             <div class="col-11 col-s-12 content">
                 <div class="col-12 col-s-12 content">
                     <div class="tabcontent">
