--- a/giohang.html
+++ b/giohang.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/css/giohang.css">
     <script type="text/javascript" src="./assets/js/jquery-3.6.0.min.js"></script>  
-    <script src="./assets/js/product.js"></script>
+    <script src="./assets/js/input.js"></script>
+    <script src="./assets/js/giohang.js"></script>
     <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://thegioianhsang.vn/application/upload/banner/logoweb_trong_su%E1%BB%91t_save_pnj24.png">
@@ -418,7 +419,7 @@
                 <a href="">Catalogue</a>
               </li>
               <li class="header__nav-item">
-                <a style="color: #ffbe00" href="lienhe.html">Liên hệ </a>
+                <a href="lienhe.html">Liên hệ </a>
               </li>
             </ul>
           </nav>
