--- a/admin/LoaiSanPham.html
+++ b/admin/LoaiSanPham.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
     <script src="../assets/js/jquery-3.6.0.min.js"></script>
     <script src="./js/click.js"></script>
+    <script src="./js/loaisp.js"></script>
     <title>Quản lý cửa hàng bán đèn trang trí</title>
 </head>
 
@@ -101,48 +102,15 @@
                                 <table class="myTable">
                                     <thead>
                                         <tr>
-                                            <th style="padding-top: 10px;"><input type="checkbox"></th>
+                                            <th style="padding-top: 10px;"></th>
                                             <th>Mã loại sản phẩm</th>
                                             <th>Tên loại sản phẩm</th>
                                             <th>Nội dung</th>
-                                            <th>Thao tác</th>
+                                            <th style="text-align: center;">Thao tác</th>
                                         </tr>
                                     </thead>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox"></td>
-                                            <td>1</td>
-                                            <td>Đèn chùm</td>
-                                            <td></td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox"></td>
-                                            <td>2</td>
-                                            <td>Đèn tường</td>
-                                            <td></td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox"></td>
-                                            <td>3</td>
-                                            <td>Đèn thả</td>
-                                            <td></td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
+                                    <tbody id="tableBody" style="text-align: center;"> 
+                                        
                                     </tbody>
                                 </table>
                             </div>
