--- a/chitietduanthuchien.html
+++ b/chitietduanthuchien.html
@@ -253,10 +253,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="container position-relative">
 <nav id="site-navigation" class="main-navigation position-relative  d-none d-md-block">
 <ul id="main-menu" class="menu  d-flex justify-content-center">
-<li><a  href="https://thegioianhsang.vn/" title="Trang chủ">Trang chủ</a></li>
-<li ><a  href="https://thegioianhsang.vn/gioi-thieu/" title="Giới thiệu">Giới thiệu</a>
+<li><a  href="./index_main.html" title="Trang chủ">Trang chủ</a></li>
+<li ><a  href="./gioithieu.html" title="Giới thiệu">Giới thiệu</a>
 </li>
-<li class="menu-item-has-children"><a  href="https://thegioianhsang.vn/den-trang-tri" title="Đèn trang trí">Đèn trang trí</a>
+<li class="menu-item-has-children"><a  href="./dennoithat.html" title="Đèn trang trí">Đèn trang trí</a>
 <ul class="sub-menu rounded" ><!--style="opacity: 1;visibility: initial;left: 0;transform: translateY(0px);"-->
 <li><a class="a" href="https://thegioianhsang.vn/den-trang-tri-hot/" title="Đèn Nội Thất">Đèn Nội Thất</a>
 <ul class="sub-menu rounded sub-last">
@@ -522,15 +522,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </li>
 </ul>
 </li></ul></li>
-<li ><a  href="https://thegioianhsang.vn/khuyen-mai/" title="Khuyến mãi">Khuyến mãi</a>
+<li ><a  href="./khuyenmai.html" title="Khuyến mãi">Khuyến mãi</a>
 </li>
-<li ><a  href="https://thegioianhsang.vn/tin-tuc/" title="Tin tức">Tin tức</a>
+<li ><a  href="./tintuc.html" title="Tin tức">Tin tức</a>
 </li>
-<li ><a class="active" href="https://thegioianhsang.vn/du-an/" title="Dự án thực hiện">Dự án thực hiện</a>
+<li ><a  href="./duanthuchien.html" title="Dự án thực hiện">Dự án thực hiện</a>
 </li>
-<li ><a  href="https://thegioianhsang.vn/catalogue/" title="Catalogue">Catalogue</a>
+<li ><a  href="#" title="Catalogue">Catalogue</a>
 </li>
-<li ><a  href="https://thegioianhsang.vn/lien-he/" title="Liên hệ">Liên hệ</a>
+<li ><a  href="lienhe.html" title="Liên hệ">Liên hệ</a>
 </li>
 </ul></nav>
 </div>
