--- a/login.html
+++ b/login.html
@@ -437,13 +437,13 @@
                             <div class="taikhoan">
                                 <p>Tài khoản:</p>
                                 <div style="border-bottom: 1px solid #949494;">
-                                    <input type="text" class="taikhoan__user" placeholder="Vui lòng nhập tài khoản của bạn">
+                                    <input type="text" id="taikhoan" class="taikhoan__user" placeholder="Vui lòng nhập tài khoản của bạn">
                                 </div>
                             </div>
                             <div class="matkhau">
                                 <p>Mật khẩu:</p>
                                 <div style="border-bottom: 1px solid #949494;" class="matkhau_wrap">
-                                    <input type="password" class="matkhau_pass" placeholder="Vui lòng nhập mật khẩu của bạn">
+                                    <input type="password" id="matkhau" class="matkhau_pass" placeholder="Vui lòng nhập mật khẩu của bạn">
                                     <i class="icon_eye fa-regular fa-eye"></i>
                                 </div>
                             </div>
