--- a/tintuc.html
+++ b/tintuc.html
@@ -441,13 +441,13 @@
                 <div class="row new__product-item-wrapper">
                     <div class="new__product-item col l-4 m-4 c-6">
                         <div class="new__product-img-wrapper">
-                            <a href="" style="width: 100%;">
+                            <a href="./chitiettintuc.html" style="width: 100%;">
                                 <img src="./assets/img/Tin tức/1.jpg" alt="" class="new__product-img">
                             </a>
                         </div>
 
                         <h4 class="title-h4">
-                            <a href="" title="Mua đèn led trang trí TPHCM tốt nhất ở đâu?">Mua đèn led trang trí TPHCM tốt nhất ở đâu?</a>
+                            <a href="./chitiettintuc.html" title="Mua đèn led trang trí TPHCM tốt nhất ở đâu?">Mua đèn led trang trí TPHCM tốt nhất ở đâu?</a>
                         </h4>
 
                         <div class="calendar">
@@ -457,7 +457,7 @@
 
                         <div class="product__title">
                             <div class="product__title-name">
-                                <a href="">Không khó để thấy những mẫu đèn led trang trí được sử dụng trong đời sống hằng ngày. Loại đèn này được ứng dụng trong rất nhiều lĩnh vực khác nhau. Ta có thể kể đến như: trang trí quán cafe, trang trí shop thời trang, trang trí phòng Karaoke, trang trí nhà ở, trang trí</a>
+                                <a href="./chitiettintuc.html">Không khó để thấy những mẫu đèn led trang trí được sử dụng trong đời sống hằng ngày. Loại đèn này được ứng dụng trong rất nhiều lĩnh vực khác nhau. Ta có thể kể đến như: trang trí quán cafe, trang trí shop thời trang, trang trí phòng Karaoke, trang trí nhà ở, trang trí</a>
                             </div>
                         </div>
 
