--- a/index_main.html
+++ b/index_main.html
@@ -19,10 +19,12 @@
     <div class="app">
         <div class="banner">
             <div class="banner-wrapper">
-                <div class="banner-top">
+                <div class="banner-top" id="bannerTop">
                     <div class="banner-item">
-                        <img src="./assets/img/Header/banner-1.jpg" alt="" id="img" class="banner-img">
-                        <img src="./assets/img/Header/banner-2.jpg" alt="" id="img" class="banner-img">
+                        <img src="./assets/img/Header/banner-1.jpg" alt="" class="banner-img">
+                    </div>
+                    <div class="banner-item">
+                        <img src="./assets/img/Header/banner-2.jpg" alt="" class="banner-img">
                     </div>
                 </div>
 
