--- a/index_product.html
+++ b/index_product.html
@@ -453,8 +453,8 @@
                 </div>
 
                 <div class="col c-7 tomtat">
-                    <h1>
-                        Đèn chùm hiện đại trang trí phòng khách cao cấp D900mm DR-NC5613/8+4
+                    <h1 class="name_product">
+                        <!-- Đèn chùm hiện đại trang trí phòng khách cao cấp D900mm DR-NC5613/8+4 -->
                     </h1>
                     
                     <div class="divauthor">
@@ -464,7 +464,7 @@
                     <div class="divauthor other-price">
                         <b>Giá bán : </b>
       
-                        <span class="current">8,177,000 VNĐ</span><del>12,580,000 đ</del>
+                        <span class="current gia_giam">8,177,000</span><span class="current" style="margin-left: 10px;">VNĐ</span><del class="gia">12580000</del><del style="margin-left: 0;">đ</del>
                     </div>
 
                     <div class="divauthor description">
