--- a/admin/SanPham.html
+++ b/admin/SanPham.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/fonts/fontawesome-free-6.3.0-web/css/all.min.css">
     <script src="../assets/js/jquery-3.6.0.min.js"></script>
     <script src="./js/click.js"></script>
+    <script src="./js/sanpham.js"></script>
     <title>Quản lý cửa hàng bán đèn trang trí</title>
 </head>
 
@@ -61,9 +62,9 @@
                                 <div class="col-12 col-s-12 padding-box">
                                     <select name="loaisp" id="TenLoaiSanPham">
                                         <option value="">--Chọn loại sản phẩm--</option>
-                                        <option value="">Đèn chùm</option>
-                                        <option value="">Đèn tường</option>
-                                        <option value="">Đèn thả</option>
+                                        <option value="Đèn chùm">Đèn chùm</option>
+                                        <option value="Đèn tường">Đèn tường</option>
+                                        <option value="Đèn thả">Đèn thả</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-s-12 padding-box">
@@ -99,13 +100,6 @@
                                 </div>
                                 <div class="col-12 col-s-12 padding-box">
                                     <input type="number" id="SoLuong" placeholder="Nhập số lượng...">
-                                </div>
-                                <div class="col-12 col-s-12 padding-box">
-                                    <label for="txtright">Trạng thái</label>
-                                </div>
-                                <div class="col-12 col-s-12 padding-box">
-                                    <input type="checkbox" id="TrangThai" value="true"
-                                    disabled style="background-color: #cecaca;">
                                 </div>
                             </form>
                         </div>
@@ -155,11 +149,10 @@
                                             <th>Giá</th>
                                             <th>Giá giảm</th>
                                             <th>Số lượng</th>
-                                            <th>Trạng thái</th>
                                             <th>Thao tác</th>
                                         </tr>
                                     </thead>
-                                    <tbody> 
+                                    <tbody id="tableBody"> 
                                         <tr>
                                             <td><input type="checkbox" ></td>
                                             <td>1</td>
@@ -167,82 +160,6 @@
                                             <td>Đèn chùm 1</td>
                                             <td>
                                                 <img src="../assets/img/Product/Đèn chùm/1.jpg" alt="">
-                                            </td>
-                                            <td>1.000.000đ</td>
-                                            <td>800.000đ</td>
-                                            <td>100</td>
-                                            <td>Null</td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox" ></td>
-                                            <td>1</td>
-                                            <td>Đèn chùm</td>
-                                            <td>Đèn chùm 2</td>
-                                            <td>
-                                                <img src="../assets/img/Product/Đèn chùm/2.jpg" alt="">
-                                            </td>
-                                            <td>1.000.000đ</td>
-                                            <td>800.000đ</td>
-                                            <td>100</td>
-                                            <td>Null</td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox" ></td>
-                                            <td>1</td>
-                                            <td>Đèn chùm</td>
-                                            <td>Đèn chùm 3</td>
-                                            <td>
-                                                <img src="../assets/img/Product/Đèn chùm/3.jpg" alt="">
-                                            </td>
-                                            <td>1.000.000đ</td>
-                                            <td>800.000đ</td>
-                                            <td>100</td>
-                                            <td>Null</td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox" ></td>
-                                            <td>1</td>
-                                            <td>Đèn chùm</td>
-                                            <td>Đèn chùm 4</td>
-                                            <td>
-                                                <img src="../assets/img/Product/Đèn chùm/4.jpg" alt="">
-                                            </td>
-                                            <td>1.000.000đ</td>
-                                            <td>800.000đ</td>
-                                            <td>100</td>
-                                            <td>Null</td>
-                                            <td style="text-align: center;">
-                                                <i class="fas fa-edit" title="Sửa"></i>
-                                                <i class="fas fa-trash-alt" title="Xóa"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody> 
-                                        <tr>
-                                            <td><input type="checkbox" ></td>
-                                            <td>1</td>
-                                            <td>Đèn chùm</td>
-                                            <td>Đèn chùm 5</td>
-                                            <td>
-                                                <img src="../assets/img/Product/Đèn chùm/5.jpg" alt="">
                                             </td>
                                             <td>1.000.000đ</td>
                                             <td>800.000đ</td>
@@ -281,10 +198,4 @@
         </div>
     </section>
 </body>
-<script>
-    function loadFile(event) {
-    var image = document.getElementById('viewimg');
-    image.src = URL.createObjectURL(event.target.files[0]);
-}
-</script>
 </html>
